test/modules/errors/load.js
module.exports = no_such_function();
